force-app/main/default/objects/Service_Compliance_Detail__c/Service_Compliance_Detail__c.object-meta.xml
<CustomObject>
    <label>Service Compliance Detail</label>
    <nameField>
        <displayFormat>SCRD-{000000}</displayFormat>
        <label>SCR Detail ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Compliance Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>