force-app/main/default/objects/Service_Compliance_Detail__c/fields/Regulatory_Decision__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Decision__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regulatory Decision</label>
    <referenceTo>RegulatoryCodeViolation</referenceTo>
    <relationshipLabel>Service Compliance Details</relationshipLabel>
    <relationshipName>Service_Compliance_Details</relationshipName>
    <type>Lookup</type>
</CustomField>