force-app/main/default/objects/Service_Compliance_Detail__c/fields/Regulatory_Decision_Rating__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Decision_Rating__c</fullName>
    <description>Look up to Regulatory Decision SCR Rating</description>
    <formula>Regulatory_Decision__r.Service_Compliance_Rating__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regulatory Decision Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>