force-app/main/default/objects/Service_Compliance_Detail__c/fields/Regulatory_Decision_Status__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Decision_Status__c</fullName>
    <description>Captures Regulatory Decision Status at time of Publishing</description>
    <label>Regulatory Decision Status</label>
    <length>18</length>
    <type>Text</type>
</CustomField>