force-app/main/default/objects/Service_Compliance_Detail__c/fields/Service_Compliance_History__c.field-meta.xml
<CustomField>
    <fullName>Service_Compliance_History__c</fullName>
    <label>Service Compliance History</label>
    <referenceTo>Service_Compliance_History__c</referenceTo>
    <relationshipLabel>Service Compliance Details</relationshipLabel>
    <relationshipName>Service_Compliance_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>