force-app/main/default/objects/Service_Compliance_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service_Compliance_History__c</columns>
    <columns>Regulatory_Decision__c</columns>
    <columns>Regulatory_Decision_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>